--- a/ui/package.json
+++ b/ui/package.json
@@ -14,7 +14,7 @@
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
+    "@types/react-dom": "^17.0.11",
     "@types/react-redux": "^7.1.20",
     "axios": "^0.24.0",
     "react": "^17.0.2",
@@ -50,5 +50,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-router-dom": "^5.3.2"
   }
 }
