--- a/package.json
+++ b/package.json
@@ -13,9 +13,6 @@
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.11",
-    "@types/react-redux": "^7.1.20",
     "axios": "^0.24.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -52,7 +49,13 @@
       "last 1 safari version"
     ]
   },
+  "resolutions": {
+    "@types/react": "17.0.2",
+    "@types/react-dom": "17.0.2"
+  },
   "devDependencies": {
-    "@types/react-router-dom": "^5.3.2"
+    "@types/react": "17.0.2",
+    "@types/react-dom": "17.0.2",
+    "@types/react-redux": "7.1.24"
   }
 }
