--- a/node_backend/.development.env
+++ b/node_backend/.development.env
@@ -1,5 +1,5 @@
 PORT=5000
-POSTGRESS_HOST=localhost
+POSTGRESS_HOST=postgres
 POSTGRES_USER=postgres
 POSTGRES_DB=admin-panel
 POSTGRESS_PASSWORD=root
